<resources>
    <string name="app_name">Project</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="failure">Failure</string>
    <string name="welcome">Welcome-</string>
    <string name="logout">Logout</string>
    <string name="change_profile">Change Profile</string>
    <string name="add_vulnerability">Add Vulnerability</string>
    <string name="severity">Severity</string>
    <string name="type">Type</string>
    <string name="targetip">TargetIP</string>
    <string name="port">Port</string>
    <string name="title_activity_maps">Map</string>
    <string name="your_location">Your Location</string>
    <string name="welcomeTextView">Welcome!!</string>
</resources>
