<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.WelcomeActivity">

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout" />

    <Button
        android:id="@+id/buttonChangeProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_profile" />

    <ListView
        android:id="@+id/listViewVulnerabilities"
        android:layout_width="match_parent"
        android:layout_height="188dp" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_vulnerability" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/idPieChart"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>